tests/paczka1/fuzzy1/69265287.err
Error in line 7: 47rjKv7 A30 65,9
Error in line 19: exx2 A30 7, 
Error in line 18: 47rjKv7 A30 41,7
Error in line 24: Mu5YmgQm S435 78,2
Error in line 22: iYXRLtx2 A778 44,4
Error in line 16: A30 S367 65,6
Error in line 35: exx2S43586,9
Error in line 32: A30 A30 59,4
